# securitm_audit_runner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: audit.yml  audit.yml.example
docs/: BACKLOG.md  MANUAL_CHECKS.md
securitm_audit_agent/: __init__.py  __main__.py  cli.py  config.py
securitm_audit_agent/checks/: __init__.py  builtin.py
securitm_audit_agent/core/: __init__.py  base.py  registry.py  report.py  runner.py
securitm_audit_agent/integrations/: __init__.py  securitm.py
securitm_audit_agent/platform/: __init__.py  context.py  facts.py  protocols.py
securitm_audit_agent/plugins/: __init__.py  met_rekom_linux.py
securitm_audit_agent/reporting/: __init__.py  pdf.py
tests/: __init__.py  helpers.py  test_builtin_checks.py  test_cli.py  test_config.py  test_core_runner.py  test_met_rekom_linux.py  test_securitm_client.py
