[project]
name = "securitm-audit-runner"
version = "0.1.0"
description = "Core audit engine for a Linux security audit agent."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Nurov Amir"}
]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
pdf = [
  "reportlab>=4.1.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
securitm-audit = "securitm_audit_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
