[project]
name = "securitm-audit-agent"
version = "0.2.0"
description = "Modular Linux security audit agent with SecurITM integration."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Nurov Amir"}
]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
pdf = [
  "reportlab>=4.1.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
securitm-audit = "securitm_audit_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F"]

[tool.setuptools.packages.find]
namespaces = false
include = ["securitm_audit_agent*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
